--- a/LeposWPF/packages.config
+++ b/LeposWPF/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
+  <package id="FontAwesome.WPF" version="4.5.0.7" targetFramework="net45" />
   <package id="MahApps.Metro" version="1.2.0.0" targetFramework="net45" />
   <package id="MahApps.Metro.Resources" version="0.4.0.0" targetFramework="net45" />
   <package id="System.Data.SQLite" version="1.0.99.0" targetFramework="net45" />
