--- a/LeposWPF/App.config
+++ b/LeposWPF/App.config
@@ -22,6 +22,11 @@
     <DbProviderFactories>
       <remove invariant="System.Data.SQLite.EF6" />
       <add name="SQLite Data Provider (Entity Framework 6)" invariant="System.Data.SQLite.EF6" description=".NET Framework Data Provider for SQLite (Entity Framework 6)" type="System.Data.SQLite.EF6.SQLiteProviderFactory, System.Data.SQLite.EF6" />
-    <remove invariant="System.Data.SQLite" /><add name="SQLite Data Provider" invariant="System.Data.SQLite" description=".NET Framework Data Provider for SQLite" type="System.Data.SQLite.SQLiteFactory, System.Data.SQLite" /></DbProviderFactories>
+      <remove invariant="System.Data.SQLite" />
+      <add name="SQLite Data Provider" invariant="System.Data.SQLite" description=".NET Framework Data Provider for SQLite" type="System.Data.SQLite.SQLiteFactory, System.Data.SQLite" />
+    </DbProviderFactories>
   </system.data>
+  <connectionStrings>
+    <add name="LeposWPFModel" connectionString="metadata=res://*/Lepos_Model.csdl|res://*/Lepos_Model.ssdl|res://*/Lepos_Model.msl;provider=System.Data.SQLite.EF6;provider connection string='data source=&quot;C:\Users\Payo\Documents\Visual Studio 2015\Projects\Lepos\LeposWPF\DB\lepos_DB&quot;;password=un2CeJr8VSmnxKPq'" providerName="System.Data.EntityClient" />
+  </connectionStrings>
 </configuration>
