--- a/LeposWPF/LeposWPF.csproj
+++ b/LeposWPF/LeposWPF.csproj
@@ -84,6 +84,8 @@
     </Reference>
     <Reference Include="System.Deployment" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Windows.Interactivity, Version=4.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\MahApps.Metro.1.2.0.0\lib\net45\System.Windows.Interactivity.dll</HintPath>
@@ -130,6 +132,12 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Client.cs">
+      <DependentUpon>Lepos_Model.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Company.cs">
+      <DependentUpon>Lepos_Model.tt</DependentUpon>
+    </Compile>
     <Compile Include="Helpers\DataGridHelper.cs" />
     <Compile Include="Helpers\Dialogs.cs" />
     <Compile Include="Helpers\Lepos.cs" />
@@ -137,6 +145,48 @@
     <Compile Include="Helpers\ReflectionHelper.cs" />
     <Compile Include="Helpers\WindowHelper.cs" />
     <Compile Include="Helpers\WODVPEntities.cs" />
+    <Compile Include="Lepos_Model.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Lepos_Model.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Lepos_Model.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Lepos_Model.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Lepos_Model.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Lepos_Model.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="Product.cs">
+      <DependentUpon>Lepos_Model.tt</DependentUpon>
+    </Compile>
+    <Compile Include="ProductPrice.cs">
+      <DependentUpon>Lepos_Model.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Provider.cs">
+      <DependentUpon>Lepos_Model.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Purchase.cs">
+      <DependentUpon>Lepos_Model.tt</DependentUpon>
+    </Compile>
+    <Compile Include="PurchasePayment.cs">
+      <DependentUpon>Lepos_Model.tt</DependentUpon>
+    </Compile>
+    <Compile Include="PurchaseProduct.cs">
+      <DependentUpon>Lepos_Model.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Sale.cs">
+      <DependentUpon>Lepos_Model.tt</DependentUpon>
+    </Compile>
+    <Compile Include="SalePayment.cs">
+      <DependentUpon>Lepos_Model.tt</DependentUpon>
+    </Compile>
+    <Compile Include="SaleProduct.cs">
+      <DependentUpon>Lepos_Model.tt</DependentUpon>
+    </Compile>
     <Compile Include="UI\AboutWindow.xaml.cs">
       <DependentUpon>AboutWindow.xaml</DependentUpon>
     </Compile>
@@ -223,6 +273,9 @@
     </Compile>
     <Compile Include="UI\TransactionsRecord.xaml.cs">
       <DependentUpon>TransactionsRecord.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="User.cs">
+      <DependentUpon>Lepos_Model.tt</DependentUpon>
     </Compile>
     <Page Include="App.xaml">
       <SubType>Designer</SubType>
@@ -375,6 +428,13 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <EntityDeploy Include="Lepos_Model.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>Lepos_Model.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <None Include="Lepos_Model.edmx.diagram">
+      <DependentUpon>Lepos_Model.edmx</DependentUpon>
+    </None>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -408,6 +468,22 @@
     <Resource Include="LocalResources\default_logo.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Lepos_Model.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>Lepos_Model.edmx</DependentUpon>
+      <LastGenOutput>Lepos_Model.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="Lepos_Model.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>Lepos_Model.edmx</DependentUpon>
+      <LastGenOutput>Lepos_Model.cs</LastGenOutput>
+      <CustomToolNamespace>LeposWPF.Model</CustomToolNamespace>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\System.Data.SQLite.Core.1.0.99.0\build\net45\System.Data.SQLite.Core.targets" Condition="Exists('..\packages\System.Data.SQLite.Core.1.0.99.0\build\net45\System.Data.SQLite.Core.targets')" />
