--- a/LeposWPF/LeposWPF.csproj
+++ b/LeposWPF/LeposWPF.csproj
@@ -138,13 +138,17 @@
     <Compile Include="Company.cs">
       <DependentUpon>Lepos_Model.tt</DependentUpon>
     </Compile>
+    <Compile Include="Helpers\Clases\CompanyHelper.cs" />
+    <Compile Include="Helpers\Clases\PurchaseHelper.cs" />
+    <Compile Include="Helpers\Clases\SaleHelper.cs" />
+    <Compile Include="Helpers\Clases\UserHelper.cs" />
     <Compile Include="Helpers\DataGridHelper.cs" />
     <Compile Include="Helpers\Dialogs.cs" />
+    <Compile Include="Helpers\KeyEventUtily.cs" />
     <Compile Include="Helpers\Lepos.cs" />
     <Compile Include="Helpers\Paths.cs" />
     <Compile Include="Helpers\ReflectionHelper.cs" />
     <Compile Include="Helpers\WindowHelper.cs" />
-    <Compile Include="Helpers\WODVPEntities.cs" />
     <Compile Include="Lepos_Model.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -484,6 +488,7 @@
       <LastGenOutput>Lepos_Model.cs</LastGenOutput>
       <CustomToolNamespace>LeposWPF.Model</CustomToolNamespace>
     </Content>
+    <Resource Include="LocalResources\Cancel.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\System.Data.SQLite.Core.1.0.99.0\build\net45\System.Data.SQLite.Core.targets" Condition="Exists('..\packages\System.Data.SQLite.Core.1.0.99.0\build\net45\System.Data.SQLite.Core.targets')" />
