Add import/export data and import excel functionalities

--- a/LeposWPF/App.config
+++ b/LeposWPF/App.config
@@ -27,6 +27,6 @@
     </DbProviderFactories>
   </system.data>
   <connectionStrings>
-    <add name="LeposWPFModel" connectionString="metadata=res://*/Lepos_Model.csdl|res://*/Lepos_Model.ssdl|res://*/Lepos_Model.msl;provider=System.Data.SQLite.EF6;provider connection string='data source=&quot;C:\Users\Payo\Documents\Visual Studio 2015\Projects\Lepos\LeposWPF\DB\lepos_DB&quot;;password=un2CeJr8VSmnxKPq'" providerName="System.Data.EntityClient" />
+    <add name="LeposWPFModel" connectionString="metadata=res://*/Lepos_Model.csdl|res://*/Lepos_Model.ssdl|res://*/Lepos_Model.msl;provider=System.Data.SQLite.EF6;provider connection string='data source=&quot;|DataDirectory|\DB\lepos_DB&quot;;password=un2CeJr8VSmnxKPq'" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
